2011-05-31  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/trace.boot, src/interp/debug.lisp: Fix problem
	with crashes during tracing.

2011-05-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* numsolve.spad.pamphlet: Make sure that solutions have
	enough accuracy.

2011-05-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/combfunc.spad.pamphlet: export iiHypergeometricF.

2011-05-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/rep2.spad.pamphlet: Add Holt-Rees improvement
	to meatAxe.

2011-05-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/crfp.spad.pamphlet: Fix calculateScale,
	improve efficiency.

2011-05-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/modring.spad.pamphlet: Improve remainder.

2011-05-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/interval.spad.pamphlet: Improve precision.

2011-05-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/special2.spad.pamphlet: Add some elliptic
	integrals.

2011-05-15  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/iterator.boot: Experimental support for
	generators.

2011-05-15  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/database.boot: Faster check for exposure.

2011-05-15  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot, src/interp/define.boot:
	Support argumentless local functions.

2011-05-15  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/expr.spad.pamphlet: Optionally remove
	irrationalities from denominators.

2011-05-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/sys-pkg.lisp, src/interp/parsing.lisp
	src/interp/primitives.lisp, src/interp/g-opt.boot,
	src/interp/macros.lisp, src/interp/vmlisp.lisp:
	Misc cleanups.

2011-05-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/clam.boot, src/interp/comp.lisp,
	src/interp/bootlex.lisp, src/interp/g-boot.boot
	src/interp/vmlisp.lisp: Simplify COMP370.
