@@ -1,3 +1,8 @@
+2011-06-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/interp/trace.boot, src/interp/debug.lisp,
+	src/interp/i-funsel.boot: Misc cleanups.
+
 2011-05-31  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/trace.boot, src/interp/debug.lisp: Fix problem
